# blockquest-remake

./: '  .clang-format  .dockerignore  .env.example  .gitignore  .gitmodules  .prettierrc.json  .tasks  CMakeLists.txt  CMakeSettings.json  LICENSE.md  README.md  REPLAY.rpl  appicon.aps  appicon.rc  docker-compose.yml  ecosystem.config.js  launcher.py  package-lock.json  package.json  tsconfig.json
.github/workflows/: cmake.yml  prod.yml  vcpkg.yml
assets/: levels.txt
assets/sound/: dash.flac  gameover.flac  gravityflip.flac  jump.flac  victory.flac  wallkick.flac
backend/: index.ts  log.ts
backend/controllers/: Auth.ts  Comment.ts  Level.ts  Replay.ts  User.ts
backend/db/: index.ts
backend/multiplayer/: index.ts
backend/util/: constants.ts  isValidLevel.ts  mail.ts  passwords.ts  tools.ts  validate.ts
game/: animated_sprite.cpp  animated_sprite.hpp  api.cpp  api.hpp  api_handle.hpp  app.cpp  app.hpp  auth.cpp  auth.hpp  context.cpp  context.hpp  debug.cpp  debug.hpp  fsm.cpp  fsm.hpp  level.cpp  level.hpp  moving_tile.cpp  moving_tile.hpp  multiplayer.cpp  multiplayer.hpp  nametag.cpp  nametag.hpp  particles.cpp  particles.hpp  player.cpp  player.hpp  player_ghost.cpp  player_ghost.hpp  replay.cpp  replay.hpp  resource.cpp  resource.hpp  settings.cpp  settings.hpp  tilemap.cpp  tilemap.hpp  util.cpp  util.hpp  world.cpp  (+1 more)
game/gui/: comment_modal.cpp  comment_modal.hpp  editor_tile_button.cpp  editor_tile_button.hpp  forgot_password_modal.cpp  forgot_password_modal.hpp  gif.cpp  gif.hpp  image_text_button.cpp  image_text_button.hpp  leaderboard_modal.cpp  leaderboard_modal.hpp  level_card.cpp  level_card.hpp  menu_bar.cpp  menu_bar.hpp  player_icon.cpp  player_icon.hpp  settings_modal.cpp  settings_modal.hpp  user_modal.cpp  user_modal.hpp
game/particles/: death.cpp  death.hpp  gravity.cpp  gravity.hpp  smoke.cpp  smoke.hpp  victory.cpp  victory.hpp
game/states/: debug.cpp  debug.hpp  edit.cpp  edit.hpp  levels.cpp  levels.hpp  main.cpp  main.hpp  search.cpp  search.hpp
lib/imgui/: imconfig.h
prisma/: schema.prisma  seed.ts
prisma/migrations/20221027172257_init/: migration.sql
prisma/migrations/20221027183358_auth/: migration.sql
prisma/migrations/20221028005303_user_permissions/: migration.sql
prisma/migrations/20221028010008_rename_perms_to_tier/: migration.sql
prisma/migrations/20221028172934_level_name_and_description/: migration.sql
prisma/migrations/20221028180438_nullable_desc/: migration.sql
prisma/migrations/20221029064420_add_downloads_count/: migration.sql
prisma/migrations/20221029084157_name_to_title/: migration.sql
prisma/migrations/20221029084357_name_to_title/: migration.sql
prisma/migrations/20221030205236_remove_auto_updated_at/: migration.sql
prisma/migrations/20221103171608_user_email_code/: migration.sql
prisma/migrations/20221103171925_6_digit_code_user/: migration.sql
prisma/migrations/20221103174522_add_code_issued_date/: migration.sql
prisma/migrations/20221104155534_votes_table/: migration.sql
prisma/migrations/20221104185933_likes_dislikes_cache/: migration.sql
prisma/migrations/20221110021547_score_model/: migration.sql
prisma/migrations/20221111064003_unique_score_level_user/: migration.sql
prisma/migrations/20221111064359_remove_id_from_userlevelscore/: migration.sql
prisma/migrations/20221111180830_add_unique_score_id/: migration.sql
prisma/migrations/20221225200544_add_comments/: migration.sql
prisma/migrations/20230105232638_replay_control_scheme/: migration.sql
prisma/migrations/20230107050448_add_verification_level/: migration.sql
prisma/migrations/20230109053601_password_reset/: migration.sql
prisma/migrations/20230109053928_add_email_pword_reset/: migration.sql
prisma/migrations/20230109054345_replace_timestamp_with_issued/: migration.sql
prisma/migrations/20230109164601_level_version/: migration.sql
prisma/migrations/20230109170242_level_version_on_score/: migration.sql
prisma/migrations/20230109203606_hideable_replays/: migration.sql
prisma/migrations/20230113064219_user_colors/: migration.sql
prisma/migrations/20230113093620_change_default_color/: migration.sql
prisma/migrations/20230114050010_pinned_levels/: migration.sql
